--- a/ProgramManager/Views/PackagesDialog.xaml
+++ b/ProgramManager/Views/PackagesDialog.xaml
@@ -66,7 +66,7 @@
                 Height="35"
                 Margin="10,10,10,10"
                 Tag="Имя пакета..."
-                Text="{Binding PackageTitle}" />
+                Text="{Binding PackageTitle, Mode=TwoWay}" />
             <Image
                 Grid.Row="2"
                 Grid.Column="1"
@@ -86,6 +86,7 @@
                         <WrapPanel>
                             <Image Width="18" Source="../Resources/Icons/Save_48px.png" />
                             <Label
+                                Name="SaveAndEdit"
                                 Height="26"
                                 BorderBrush="{x:Null}"
                                 Content="Сохранить" />
@@ -157,7 +158,7 @@
                             FocusVisualStyle="{x:Null}"
                             FontSize="12"
                             Style="{x:Null}"
-                            Text="{Binding Description}"
+                            Text="{Binding Description, Mode=TwoWay}"
                             TextWrapping="Wrap" />
                     </Grid>
                 </TabItem>
