--- a/ProgramManager/Views/DialogPacks/InputName.xaml
+++ b/ProgramManager/Views/DialogPacks/InputName.xaml
@@ -11,7 +11,8 @@
     HorizontalAlignment="Center"
     VerticalAlignment="Center"
     WindowStartupLocation="CenterScreen"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    >
     <Window.DataContext>
         <viewModels:InputNameViewModel />
     </Window.DataContext>
