--- a/ProgramManager/Views/MainView.xaml
+++ b/ProgramManager/Views/MainView.xaml
@@ -295,13 +295,25 @@
             SelectedItem="{Binding CurrentPackage, Mode=TwoWay}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
-                        <TextBlock
-                            Height="45"
-                            Margin="5,0,0,0"
-                            Padding="0,15"
-                            Text="{Binding Name}" />
-                    </StackPanel>
+                    <WrapPanel>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="45" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Image
+                                Grid.Column="0"
+                                Width="40"
+                                Source="{Binding Image}">
+                            </Image>
+                            <TextBlock
+                                Grid.Column="1"
+                                Height="45"
+                                Margin="5,0,0,0"
+                                Padding="15,15"
+                                Text="{Binding Name}" />
+                        </Grid>
+                    </WrapPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
